objects/Case_Order_Item__c.object
<CustomObject>
    <fields>
        <fullName>CC_Order_Item__c</fullName>
        <label>CC Order Item</label>
        <referenceTo>ccrz__E_OrderItem__c</referenceTo>
        <relationshipLabel>Case Order Items</relationshipLabel>
        <relationshipName>Case_Order_Items_RMA</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Case__c</fullName>
        <label>Case</label>
        <referenceTo>Case</referenceTo>
        <relationshipLabel>Case Order Items</relationshipLabel>
        <relationshipName>Case_Order_Items_RMA</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Return_Quantity__c</fullName>
        <label>Return Quantity</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Case Order Item</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>COI-{0000}</displayFormat>
        <label>Case Order Item Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Case Order Items</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>